syntax = "proto3";

package twirp;

option go_package = "github.com/acerohernan/twirp-boilerplate/twirp";

import "models.proto";

service AuthService {
    rpc CreateSession (CreateSessionRequest) returns (CreateSessionResponse) {}
    rpc ListSessions (ListSessionsRequest) returns (ListSessionsResponse) {}
}

message CreateSessionRequest {
    string email = 1;
}

message CreateSessionResponse {
    core.Session session = 1;
}

message ListSessionsRequest {}

message ListSessionsResponse {
    repeated core.Session sessions = 1;
}